[project]
name = "as734x"
version = "0.1.0"
description = "AS734X driver in Micropython"
authors = [
    {name = "luciodias"}
]
license = {text = "BSD"}
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.6,<0.16.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]
docs = [
    "mkdocstrings-python (>=2.0.3,<3.0.0)",
    "mkdocs-material (>=9.7.5,<10.0.0)",
    "mkdocstrings (>=1.0.3,<2.0.0)",
    "mkdocs-macros-plugin (>=1.5.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.taskipy.tasks]
lint = "ruff check && ruff check --select I --fix"
format = "ruff format"
docs = "mkdocs serve --livereload"
pre_test = "task lint"
test = "pytest -s -x --cov=notas_musicais -vv"
post_test = "coverage html"